# fractal-generator

./: .gitignore  CMakeLists.txt  Makefile  README.txt  fade.pseudo  fractals.c  fractals.h  julia.c  main.c  mywriter.c  p.c  png.c
